added change characters button and it's logic

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             <div class="col-2 text-center m-3 fight p-1 lead">
                     <p> Fight: </p>
                     <hr>
-                    <button type="button" class="btn btn-lg text-white bg-warning mb-3" id="attackButton" >Attack</button>
-                    <button type="button" class="btn btn-lg text-white bg-success" id="resetButton">Reset Game</button>
+                    <button type="button" class="btn btn-lg text-white bg-warning mb-3 gameButtons" id="attackButton" >Attack</button>
+                    <button type="button" class="btn btn-lg text-white bg-success mb-3 gameButtons" id="resetButton">Reset Game</button>
+                    <button type="button" class="btn btn-lg text-white bg-info p-1 gameButtons" id="changeCharactersButton">Change Characters</button>
                     <p class="mt-4">Wins: <span class="winsDisplay">0</span></p>
                     <p>Losses: <span class="lossesDisplay">0</span></p>
                 </div>
