--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Background-image was taken from : https://wall.alphacoders.com/big.php?i=442432 -->
     <!-- Character images were taken from: https://www.deviantart.com/biscuitatus/art/Adventure-Time-Portrait-Series-608559979 -->
+
 </head>
 
 <body>
@@ -26,15 +27,15 @@
                 <button type="button" class="btn btn-lg " id="finnImage" value="220"><p>Finn</p><img src="assets/images/finn.jpg"
                         class="image-thumbnail" alt="Finn's image"><p class="mt-3 health">220</p></button>
                 <button type="button" class="btn btn-lg " id="pbgImage" value="180"><p>PBG</p><img src="assets/images/pbg.jpg"
-                        class="image-thumbnail" alt="PBG's image"><p class="mt-3 health">180</p></button>
+                        class="image-thumbnail" alt="PBG's image"><p class="mt-3 health">220</p></button>
                 <button type="button" class="btn btn-lg " id="iceKingImage" value="200"><p>Ice King</p><img src="assets/images/iceking.jpg"
-                        class="image-thumbnail" alt="Ice King's image"><p class="mt-3 health">200</p></button>
+                        class="image-thumbnail" alt="Ice King's image"><p class="mt-3 health">210</p></button>
                 <button type="button" class="btn btn-lg " id="marcyImage" value="250"><p>Marceline</p><img src="assets/images/marcy.jpg"
-                        class="image-thumbnail" alt="Marceline's image"><p class="mt-3 health">250</p></button>
+                        class="image-thumbnail" alt="Marceline's image"><p class="mt-3 health">230</p></button>
                 <button type="button" class="btn btn-lg " id="bmoImage" value="100"><p>BMO</p><img src="assets/images/bmo.jpg"
-                        class="image-thumbnail" alt="BMO's image"><p class="mt-3 health">100</p></button>
+                        class="image-thumbnail" alt="BMO's image"><p class="mt-3 health">180</p></button>
                 <button type="button" class="btn btn-lg " id="lspImage" value="120"><p>LSP</p><img src="assets/images/lsp.jpg"
-                        class="image-thumbnail" alt="LSP's image"><p class="mt-3 health">120</p></button>
+                        class="image-thumbnail" alt="LSP's image"><p class="mt-3 health">200</p></button>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -42,12 +43,12 @@
                 <p> Your Character: </p>
                 <hr>
             </div>
-            <div class="col-2 text-center m-3 fight p-1 lead">
+            <div class=" col-2 text-center m-3 fight p-1 lead">
                     <p> Fight: </p>
                     <hr>
-                    <button type="button" class="btn btn-lg text-white bg-warning mb-3 gameButtons" id="attackButton" >Attack</button>
-                    <button type="button" class="btn btn-lg text-white bg-success mb-3 gameButtons" id="resetButton">Reset Game</button>
-                    <button type="button" class="btn btn-lg text-white bg-info p-1 gameButtons" id="changeCharactersButton">Change Characters</button>
+                    <button type="button" class="btn btn-md text-white bg-warning mb-3 gameButtons" id="attackButton" >Attack</button>
+                    <button type="button" class="btn btn-md text-white bg-success mb-3 gameButtons" id="resetButton">Reset Game</button>
+                    <button type="button" class="btn btn-md text-white bg-info p-1 gameButtons" id="changeCharactersButton">Change Characters</button>
                     <p class="mt-4">Wins: <span class="winsDisplay">0</span></p>
                     <p>Losses: <span class="lossesDisplay">0</span></p>
                 </div>
